# mini-r1

./: .gitignore  README.md  chat-template.jinja  cli.py  data_utils.py  main.py  model_utils.py  pyproject.toml  type_defs.py  utils.py  vllm_worker_extension.py
src/: batch_packer.py  data_utils.py  distributed_packer.py  rewards.py
