[project]
name = "mini-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "numba>=0.61.2",
    "typer>=0.21.0",
    "vllm>=0.13.0",
]

[project.optional-dependencies]
cuda = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
cuda = [{ requirement = "torch", match-runtime = true }]
