[project]
name = "mini-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "asyncio>=4.0.0",
    "datasets>=4.4.2",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "mistral-common>=1.8.8",
    "numba>=0.61.2",
    "openai>=2.14.0",
    "typer>=0.21.0",
    "vllm>=0.13.0",
    "wandb>=0.19.0",
]

[project.optional-dependencies]
cuda = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
cuda = [{ requirement = "torch", match-runtime = true }]

# we need to exclude all of these directories otherwise the tool tries to
# load all of them and crashes the server!
[tool.basedpyright]
exclude = [
    "**/__pycache__",
    "**/.venv",
    ".venv",
    "**/wandb",
    "**/generated_data",
    "**/.vscode",
    "**/test-saved-model",
    "**/*.ipynb"
]
ignore = [
    ".venv/**",
    "**/.venv/**"
]
typeCheckingMode = "basic"
useLibraryCodeForTypes = false
